jenkins/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-master
  namespace: infrastructure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-master
  template:
    metadata:
      labels:
        app: jenkins-master
    spec:
      containers:
        - name: jenkins
          image: jenkins-master:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-master
  namespace: infrastructure
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 32000
  selector:
    app: jenkins-master
