jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: infrastructure
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: jenkins
